# n-gram-index

./: .gitignore  .travis.yml  CMakeLists.txt  NGramm.h  README.md  indexer.cpp  indexer.h  indexer.i  indexer.pro  indexer_impl.h  unit_test.py
Python/: n_gram.i
indexer_lib/: CMakeLists.txt  indexer_impl.cpp  indexer_impl.h
python_extention/: CMakeLists.txt  indexer.h  indexer.i
src/: NGram_p.h
src/Python/: n_gram.cpp  n_gram.h  n_gram.i
tests/: python_extension_test.py
