cmake_minimum_required(VERSION 2.6)
project(indexer)

SET(CMAKE_CXX_FLAGS "-std=c++0x -g")

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs 2.7 REQUIRED)
FIND_PACKAGE(PythonInterp 2.7 REQUIRED)

INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

#INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/../python/Include")
#INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/../python/build/linux")


INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

SET(CMAKE_SWIG_FLAGS "-Wall")

SET_SOURCE_FILES_PROPERTIES(indexer.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(indexer.i PROPERTIES SWIG_FLAGS "-builtin")

SWIG_ADD_MODULE(indexer python indexer.i indexer.cpp)
SWIG_LINK_LIBRARIES(indexer ${PYTHON_LIBRARIES})


MESSAGE(STATUS "PYTHONPATH: " ${CMAKE_CURRENT_BINARY_DIR}/unit_test.py)
enable_testing()
add_test(NAME python_unit_test COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/unit_test.py  ${CMAKE_CURRENT_BINARY_DIR})
