
FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs 2.7)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "-Wall")

SET_SOURCE_FILES_PROPERTIES(indexer.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(indexer.i PROPERTIES SWIG_FLAGS "-builtin")

SWIG_ADD_MODULE(indexer python indexer.i indexer.cpp)
SWIG_LINK_LIBRARIES(indexer ${PYTHON_LIBRARIES} indexer_lib)
